worked on landing page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="backgroundcliptext">
   <head>
-    <title>TOLA ONIYANGI</title>
+    <title>Tola Oniyangi | Architecture + Planning</title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -24,14 +24,18 @@
   <body style='background:rgba(0,0,0,0);'>
     <!-- big text with its own container --> 
     <div class="title">
+      <h1>tola oniyangi</h1>
       <p class="index-links">
         <a href="assignments/home.html" class="index-link-styling">
-          <h1><strong> tola oniyangi:</strong>                        
-          </h1>
           <p class="index-link-styling"> 
-              design + visualization 
+              <a href=" ">design</a> + <a href=" ">visualization</a> 
+          </p>
+          
+          <p class="index-link-styling"> 
+              <a href=" ">about</a>, <a href=" ">resume</a>
           </p>
         </a>
+
         <h2>c Tola Oniyangi, 2017 </h2>
       </div>
     </div>
