did front page, still gotta fix sizing+fonts for smaller screens

--- a/index.html
+++ b/index.html
@@ -24,20 +24,22 @@
   <body style='background:rgba(0,0,0,0);'>
     <!-- big text with its own container --> 
     <div class="title">
-      <h1>tola oniyangi</h1>
+      
       <p class="index-links">
-        <a href="assignments/home.html" class="index-link-styling">
-          <p class="index-link-styling"> 
-              <a href=" ">design</a> + <a href=" ">visualization</a> 
-          </p>
-          
-          <p class="index-link-styling"> 
-              <a href=" ">about</a>, <a href=" ">resume</a>
-          </p>
-        </a>
+        <p class="index-link-styling"> 
+          <a href=" ">design</a> + <a href=" ">visualization</a> 
+          <h1>by Tola Oniyangi</h1>
+          <br>
+          <a href =" " id="indexLinkSmall">:about</a>
+          <br>
+          <a href=" " id="indexLinkSmall">:resume</a>
+        </p>
+      </p>
 
-        <h2>c Tola Oniyangi, 2017 </h2>
-      </div>
+      <h1 id="footer">
+        c Tola Oniyangi, 2017 
+      </h1>
+
     </div>
 
 
