added masonry grid layout for home page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       
       <p class="index-links">
         <p class="index-link-styling"> 
-          <a href=" ">design</a> + <a href=" ">visualization</a> 
+          <a href="untitled.html">design</a> + <a href="untitled.html">visualization</a> 
           <h1>by Tola Oniyangi</h1>
           <br>
           <a href =" " id="indexLinkSmall">:about</a>
