finished functionality home page

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             <div class="col-md-4 col-sm-6 item">
               <div class="thumbnail"> 
                 <a href="www.google.com">
-                  <img src="http://lorempixel.com/200/200/abstract" alt="">
-                  <h3 class="thumbnailTitle">  Bridge </h3>
+                  <img src="img/background_text.png" alt="">
+                  <h3 class="thumbnailTitle"> Bridge </h3>
                   <p class="thumbnailInfo"> this is more info</p>
                   <p class="thumbnailTags">
                     <a href="http://google.com">#blablabla</a>
