added images for front page, still gotta fix some formatting issues

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Tola Oniyangi | Architecture + Planning</title>
     
     <!-- Google fonts code -->
-    <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Montserrat" rel="stylesheet">
 
     <!-- bootstrap set up--> 
     <meta charset="utf-8">
@@ -81,7 +81,7 @@
             <div class="col-md-4 col-sm-6 item">
               <div class="thumbnail"> 
                 <a href="html/projectPage.html">
-                  <img src="img/intro_CitiBike-01.png" alt="">
+                  <img src="img/intro_CitiBike.png" alt="">
                   <h3 class="thumbnailTitle"> Citi Bike Accessibility </h3>
                   <p class="thumbnailInfo"> How accessible is the Citi Bike network to New York City residents?</p>
                 </a>
@@ -99,12 +99,23 @@
               </div>
             </div><!--/.item  -->
 
+            <!-- MCDA GIS  -->
+            <div class="col-md-4 col-sm-6 item">
+              <div class="thumbnail"> 
+                <a href="html/projectPage.html">
+                  <img src="img/intro_MCDA_GIS.png" alt="">
+                  <h3 class="thumbnailTitle"> Siting Libraries </h3>
+                  <p class="thumbnailInfo"> suitability, mcda </p>
+                </a>
+              </div>
+            </div><!--/.item  -->
+
             <!-- Visualization critique datavis  -->
             <div class="col-md-4 col-sm-6 item">
               <div class="thumbnail"> 
                 <a href="html/projectPage.html">
-                  <img src="img/background_text.png" alt="">
-                  <h3 class="thumbnailTitle"> Critique </h3>
+                  <img src="img/intro_DataSketchesCritique.png" alt="">
+                  <h3 class="thumbnailTitle"> more abt web design here </h3>
                   <p class="thumbnailInfo"> this is more info</p>
                 </a>
               </div>
@@ -114,7 +125,7 @@
             <div class="col-md-4 col-sm-6 item">
               <div class="thumbnail"> 
                 <a href="html/projectPage.html">
-                  <img src="img/background_text.png" alt="">
+                  <img src="img/intro_DMC2.png" alt="">
                   <h3 class="thumbnailTitle"> Sprawl </h3>
                   <p class="thumbnailInfo"> Predicting urban sprawl through machine learning</p>
                 </a>
@@ -125,7 +136,7 @@
             <div class="col-md-4 col-sm-6 item">
               <div class="thumbnail"> 
                 <a href="html/projectPage.html">
-                  <img src="img/background_text.png" alt="">
+                  <img src="img/intro_Library.png" alt="">
                   <h3 class="thumbnailTitle"> Library </h3>
                   <p class="thumbnailInfo"> this is more info</p>
                 </a>
@@ -136,9 +147,9 @@
             <div class="col-md-4 col-sm-6 item">
               <div class="thumbnail"> 
                 <a href="html/projectPage.html">
-                  <img src="img/background_text.png" alt="">
+                  <img src="img/intro_Flatbush.png" alt="">
                   <h3 class="thumbnailTitle"> Neighborhood Feel </h3>
-                  <p class="thumbnailInfo"> this is more info</p>
+                  <p class="thumbnailInfo"> talk about narrative aspect</p>
                 </a>
               </div>
             </div><!--/.item  -->
@@ -147,7 +158,7 @@
             <div class="col-md-4 col-sm-6 item">
               <div class="thumbnail"> 
                 <a href="html/projectPage.html">
-                  <img src="img/background_text.png" alt="">
+                  <img src="img/intro_Bridge2.png" alt="">
                   <h3 class="thumbnailTitle"> Bridge </h3>
                   <p class="thumbnailInfo"> this is more info</p>
                 </a>
