--- a/html/airbnb.html
+++ b/html/airbnb.html
@@ -54,7 +54,7 @@
         <div class="sideText"> 
           <h3> Airbnb Analysis</h3>
           <p> This project looks at New York City neighborhood identity through the lens of Airbnb guest reviews and host listings. It visualizes text data to give an idea of the ways in which Airbnb's active users, those who write listings and leave reviews, conceive of New York City's neighborhoods </p> 
-          <p class = "subtitle"> Project done in Spring 2017 in collaboration with Rachael Dottle, Eric Wong, Clara Dykstra, and Andreea Seusan </p>    
+          <p class = "additionalInfo"> Project done in Spring 2017 in collaboration with Rachael Dottle, Eric Wong, Clara Dykstra, and Andreea Seusan </p>    
         </div>
       </div></div>
     </div> <!-- container  -->
