--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Tola Oniyangi</a>
+        <a class="navbar-brand" href="index.html">Tola Oniyangi <br>
+          <span class="subtitle"> Analysis, Visualization, Design </span>
+        </a>
       </div>
+      <!-- navbar collapse  -->
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Projects</a></li>
@@ -53,7 +56,7 @@
    <div class="container main-container">
       <div class="row masonry-container">
         <!-- change col-md-4 to change number of columns on page -->
-        <!-- airbnb -->
+        <!-- DV final : airbnb -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail">
             <a href="html/airbnb.html">
@@ -63,7 +66,7 @@
           </div>
         </div><!--/.item  -->
 
-        <!-- GIS final report -->
+        <!-- GIS final report : citibike -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="html/projectPage.html">
@@ -107,7 +110,7 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="html/projectPage.html">
-              <img src="img/intro_DMC2.png" alt="">
+              <img src="img/intro_DMC3.png" alt="">
               <h3 class="thumbnailTitle"> Sprawl </h3>
             </a>
           </div>
@@ -137,7 +140,7 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="html/projectPage.html">
-              <img src="img/intro_Bridge2.png" alt="">
+              <img src="img/intro_Bridge3.png" alt="">
               <h3 class="thumbnailTitle"> Bridge </h3>
             </a>
           </div>
