cleaned up styling a bit, added some more responsiveness for project page, finalized style

--- a/html/airbnb.html
+++ b/html/airbnb.html
@@ -25,26 +25,29 @@
   <body>
 
     <!-- Page Header -->
-   <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="../index.html">Tola Oniyangi</a>
+     <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="../index.html">Tola Oniyangi <br>
+            <span class="subtitle"> Analysis, Visualization, Design </span>
+          </a>
+        </div>
+        <!-- navbar collapse  -->
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="../index.html">Projects</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../contact.html">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
-      <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="../index.html">Projects</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </div><!--/.nav-collapse -->
-    </div>
-   </nav>
+     </nav>
 
   <!-- side bar sticky  -->
    <div class="sidePanel">
@@ -52,9 +55,10 @@
       <div class="row">
       <div class="col-md-3">
         <div class="sideText"> 
-          <h3> Airbnb Analysis</h3>
-          <p> This project looks at New York City neighborhood identity through the lens of Airbnb guest reviews and host listings. It visualizes text data to give an idea of the ways in which Airbnb's active users, those who write listings and leave reviews, conceive of New York City's neighborhoods </p> 
-          <p class = "additionalInfo"> Project done in Spring 2017 in collaboration with Rachael Dottle, Eric Wong, Clara Dykstra, and Andreea Seusan </p>    
+          <!-- <h1> Airbnb Analysis</h1> -->
+          <h2>How do Airbnb's active users, i.e. those who write listings and leave reviews, conceive of New York City's neighborhoods? </h2>
+          <p> This project visualizes Airbnb text data and looks at New York City neighborhood identity through the lens of Airbnb guest reviews and host listings.</p> 
+          <p> Spring 2017. In collaboration with Rachael Dottle, Eric Wong, Clara Dykstra, and Andreea Seusan </p>    
         </div>
       </div></div>
     </div> <!-- container  -->
@@ -66,7 +70,7 @@
       <div class="row">
         <div class="col-md-9">
           <div class="page" id="data">
-            <a href="https://rdottle.github.io/dv-final-project/index.html"><img src="../img/DV-Sp17_GroupTBD-sm.gif"> </a>   
+            <a href="https://rdottle.github.io/dv-final-project/index.html" target="_blank"><img src="../img/DV-Sp17_GroupTBD-sm.gif"> </a>   
           </div>
         </div>
       </div>
