--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <!-- navbar collapse  -->
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Projects</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li class="active"><a href="index.html">Projects</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
@@ -56,15 +56,7 @@
    <div class="container main-container">
       <div class="row masonry-container">
         <!-- change col-md-4 to change number of columns on page -->
-        <!-- DV final : airbnb -->
-        <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail">
-            <a href="html/airbnb.html">
-              <img src="img/intro_Airbnb.png" alt="">
-              <h3 class="thumbnailTitle"> Airbnb Analysis </h3>
-            </a> 
-          </div>
-        </div><!--/.item  -->
+
 
         <!-- GIS final report : citibike -->
         <div class="col-md-4 col-sm-6 item">
@@ -72,6 +64,17 @@
             <a href="html/projectPage.html">
               <img src="img/intro_CitiBike.png" alt="">
               <h3 class="thumbnailTitle"> Citi Bike Accessibility </h3>
+            </a>
+          </div>
+        </div><!--/.item  -->
+
+
+        <!-- MCDA GIS  -->
+        <div class="col-md-4 col-sm-6 item">
+          <div class="thumbnail"> 
+            <a href="html/projectPage.html">
+              <img src="img/intro_MCDA_GIS.png" alt="">
+              <h3 class="thumbnailTitle"> Siting Libraries </h3>
             </a>
           </div>
         </div><!--/.item  -->
@@ -86,21 +89,20 @@
           </div>
         </div><!--/.item  -->
 
-        <!-- MCDA GIS  -->
+        <!-- DV final : airbnb -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> 
-            <a href="html/projectPage.html">
-              <img src="img/intro_MCDA_GIS.png" alt="">
-              <h3 class="thumbnailTitle"> Siting Libraries </h3>
-            </a>
+          <div class="thumbnail">
+            <a href="html/airbnb.html">
+              <img src="img/intro_Airbnb2.png" alt="">
+              <h3 class="thumbnailTitle"> Airbnb Analysis </h3>
+            </a> 
           </div>
         </div><!--/.item  -->
-
         <!-- Visualization critique datavis  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="html/projectPage.html">
-              <img src="img/intro_DataSketchesCritique.png" alt="">
+              <img src="img/intro_DataSketchesCritique2.png" alt="">
               <h3 class="thumbnailTitle"> more abt web design here </h3>
             </a>
           </div>
@@ -145,6 +147,9 @@
             </a>
           </div>
         </div><!--/.item  -->
+
+
+
       </div> <!--/.masonry-container  -->
     </div><!--/.tab-panel -->
   </div><!-- /.container -->
