--- a/html/about.html
+++ b/html/about.html
@@ -41,36 +41,27 @@
         <!-- navbar collapse  -->
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="../index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="../index.html">Projects</a></li>
+            <li class="active"><a href="about.html">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
      </nav>
 
-  <!-- side bar sticky  -->
-   <div class="sidePanel">
-    <div class="container">
+    <!-- Page Content  -->
+    <div class = "container">
       <div class="row">
-      <div class="col-md-3">
-        <div class="sideText"> 
-          <!-- <h1> Airbnb Analysis</h1> -->
-          <h2>How do Airbnb's active users, i.e. those who write listings and leave reviews, conceive of New York City's neighborhoods? </h2>
-          <p> This project visualizes Airbnb text data and looks at New York City neighborhood identity through the lens of Airbnb guest reviews and host listings.</p> 
-          <p class="additionalInfo"> Spring 2017. In collaboration with Rachael Dottle, Eric Wong, Clara Dykstra, and Andreea Seusan </p>    
+        <div class = "col-md-6 col-sm-6 item">
+          <p> Tola Oniyangi is passionate about finding ways to integrate her love for (architectural) design, data visualization and analysis, and urban planning together. She has an affinity for thinking about the ways in which design impacts the way people move through cities and buildings. She believes in design as a force for addressing social issues. She is currently pursuing these interests as a dual-degree Architecture and Urban Planning masters student at Columbia University's Graduate School of Architecture Planning and Preservation.</p>
+          &nbsp
+          <p> Tola is currently working at the Center for Spatial Research and the Temply Hoyne Buell Center for the study of American Architecture at Columbia University.</p>
         </div>
-      </div></div>
-    </div> <!-- container  -->
-   </div><!-- sidepanel  -->
-
-  <!-- body panel-->
-   <div class="bodyPanel">
-    <div class = "container" >
-      <div class="row">
-        <div class="col-md-9">
-          <div class="page" id="data">
-            <a href="https://rdottle.github.io/dv-final-project/index.html" target="_blank"><img src="../img/DV-Sp17_GroupTBD-sm.gif"> </a>   
-          </div>
+        <div class = "col-md-6 col-sm-6 item">
+          <a href=""  target="_blank"> Resume </a> <br>
+          <a href="https://www.linkedin.com/in/tolaoniyangi/"  target="_blank"> LinkedIn</a> <br>
+          <a href="https://twitter.com/TolaOniyangi"  target="_blank"> Twitter </a> <br>
+          <p> tolaoniyangi@gmail.com</p> <br>
+          <p> tola.oniyangi@columbia.edu</p>
         </div>
       </div>
     </div>
