--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Architecture + Planning</title>
+    <title>Tola Oniyangi | Projects </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Montserrat" rel="stylesheet">
@@ -42,8 +42,7 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="index.html">Projects</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="html/about.html">About</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
