--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- GIS final report : citibike -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="html/projectPage.html">
+            <a href="html/citibike.html">
               <img src="img/intro_CitiBike.png" alt="">
               <h3 class="thumbnailTitle"> Citi Bike Accessibility </h3>
             </a>
@@ -71,7 +71,7 @@
         <!-- MCDA GIS  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="html/projectPage.html">
+            <a href="html/MCDA_library.html">
               <img src="img/intro_MCDA_GIS.png" alt="">
               <h3 class="thumbnailTitle"> Siting Libraries </h3>
             </a>
@@ -81,7 +81,7 @@
         <!-- Logo Design for Tolu  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="html/projectPage.html">
+            <a href="html/theread.html">
               <img src="img/intro_LogoTheRead.png" alt="">
               <h3 class="thumbnailTitle"> The Read </h3>
             </a>
@@ -100,9 +100,9 @@
         <!-- Visualization critique datavis  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="html/projectPage.html">
+            <a href="html/datasketches.html">
               <img src="img/intro_DataSketchesCritique2.png" alt="">
-              <h3 class="thumbnailTitle"> more abt web design here </h3>
+              <h3 class="thumbnailTitle"> Visualization Critique </h3>
             </a>
           </div>
         </div><!--/.item  -->
@@ -110,9 +110,9 @@
         <!-- DMC  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="html/projectPage.html">
+            <a href="html/urbansprawl.html">
               <img src="img/intro_DMC3.png" alt="">
-              <h3 class="thumbnailTitle"> Sprawl </h3>
+              <h3 class="thumbnailTitle"> Predicting Urban Sprawl </h3>
             </a>
           </div>
         </div><!--/.item  -->
@@ -120,7 +120,7 @@
         <!-- LIBRARY  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="html/projectPage.html">
+            <a href="html/library.html">
               <img src="img/intro_Library.png" alt="">
               <h3 class="thumbnailTitle"> Library </h3>
             </a>
@@ -130,9 +130,9 @@
         <!-- DATASCAPES  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="html/projectPage.html">
+            <a href="html/datascapes.html">
               <img src="img/intro_Flatbush.png" alt="">
-              <h3 class="thumbnailTitle"> Neighborhood Feel </h3>
+              <h3 class="thumbnailTitle"> Mapping the "Vibe" </h3>
             </a>
           </div>
         </div><!--/.item  -->
@@ -140,9 +140,9 @@
         <!-- BRIDGE  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="html/projectPage.html">
+            <a href="html/bridge.html">
               <img src="img/intro_Bridge3.png" alt="">
-              <h3 class="thumbnailTitle"> Bridge </h3>
+              <h3 class="thumbnailTitle"> Blurring Boundaries </h3>
             </a>
           </div>
         </div><!--/.item  -->
