--- a/html/airbnb.html
+++ b/html/airbnb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Airbnb </title>
+    <title>Tola Oniyangi | Airbnb Analysis </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -57,7 +57,7 @@
           <!-- <h1> Airbnb Analysis</h1> -->
           <h2>How do Airbnb's active users, i.e. those who write listings and leave reviews, conceive of New York City's neighborhoods? </h2>
           <p> This project visualizes Airbnb text data and looks at New York City neighborhood identity through the lens of Airbnb guest reviews and host listings.</p> 
-          <p class="additionalInfo"> Spring 2017. In collaboration with Rachael Dottle, Eric Wong, Clara Dykstra, and Andreea Seusan </p>    
+          <p class="additionalInfo"> Spring 2017. Data Visualization for Architecture, Urbanism and the Humanities. Taught by Juan Francisco Saldarriaga Chaux. In collaboration with Rachael Dottle, Eric Wong, Clara Dykstra, and Andreea Seusan. </p>    
         </div>
       </div></div>
     </div> <!-- container  -->
