--- a/html/datascapes.html
+++ b/html/datascapes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Airbnb </title>
+    <title>Tola Oniyangi | Mapping the "Vibe" </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -41,27 +41,37 @@
         <!-- navbar collapse  -->
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="../index.html">Projects</a></li>
-            <li class="active"><a href="about.html">About</a></li>
+            <li class="active"><a href="../index.html">Projects</a></li>
+            <li><a href="about.html">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
      </nav>
 
-    <!-- Page Content  -->
-    <div class = "container">
+  <!-- side bar sticky  -->
+   <div class="sidePanel">
+    <div class="container">
       <div class="row">
-        <div class = "col-md-6 col-sm-6 item">
-          <p> I am passionate about finding ways to integrate her love for (architectural) design, data visualization and analysis, and urban planning together. I have an affinity for thinking about the ways in which design impacts the way people move through cities and buildings. I believe in design as a force for addressing social issues. I am currently pursuing these interests as a dual-degree Architecture and Urban Planning masters student at Columbia University's Graduate School of Architecture Planning and Preservation.</p>
-          &nbsp
-          <p> I am currently working at the Center for Spatial Research and the Temple Hoyne Buell Center for the study of American Architecture at Columbia University.</p>
+      <div class="col-md-3">
+        <div class="sideText"> 
+          <!-- <h1> Airbnb Analysis</h1> -->
+          <h2>How can we measure a neighborhood’s “vibe” and communicate it to a certain demographic? </h2>
+          <p> This video mapping project is tailored to prospective college students through a fun graphic sensibility, lighthearted questions and a peppy musical score. It analyzes how suitable Brooklyn's Flatbush Avenue between Tillary and Fulton streets is for an ideal college neighborhood using a checklist of important qualities prospective students look for in their future neighborhoods. Data used includes field work and information from various city and national agencies.</p> 
+          <p class="additionalInfo"> Fall 2015. Datascapes and the Informal City - taught by  Leah Meisterlin. In collaboration with Joud Al Shdaifat and Kamay Jin. </p>    
         </div>
-        <div class = "col-md-6 col-sm-6 item">
-          <a href=""  target="_blank"> Resume </a> <br>
-          <a href="https://www.linkedin.com/in/tolaoniyangi/"  target="_blank"> LinkedIn</a> <br>
-          <a href="https://twitter.com/TolaOniyangi"  target="_blank"> Twitter </a> <br>
-          <p> tolaoniyangi@gmail.com</p> <br>
-          <p> tola.oniyangi@columbia.edu</p>
+      </div></div>
+    </div> <!-- container  -->
+   </div><!-- sidepanel  -->
+
+  <!-- body panel-->
+   <div class="bodyPanel">
+    <div class = "container" >
+      <div class="row">
+        <div class="col-md-9">
+          <div class="page" id="data">
+            <iframe width="853" height="480" src="https://www.youtube.com/embed/iFGARMjIu8o" frameborder="0" allowfullscreen></iframe>
+            <img src="../img/datascapes_staticmap.png">  
+          </div>
         </div>
       </div>
     </div>
