addd content for bridge

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="html/bridge.html">
-              <img src="img/intro_Bridge3.png" alt="">
+              <img src="img/intro_Bridge.jpg" alt="">
               <h3 class="thumbnailTitle"> Blurring Boundaries </h3>
             </a>
           </div>
