--- a/html/bridge.html
+++ b/html/bridge.html
@@ -68,8 +68,38 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
-          <div class="page" id="data">
-            <img src="../img/DV-Sp17_GroupTBD-sm.gif"> 
+          <div class="col-md-6">
+            <img src="../img/bridge_SketchSection.jpg"> 
+          </div>
+          <div class="col-md-6">
+            <img src="../img/bridge_SketchPlan.jpg"> 
+          </div>
+          <div class="col-md-4">
+            <img src="../img/bridge_ModelWindSide.jpg"> 
+          </div>
+          <div class="col-md-4">
+            <img src="../img/bridge_ModelWind.JPG"> 
+          </div>
+          <div class="col-md-4">
+            <img src="../img/bridge_ModelGround.JPG"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/bridge_SitePlan.jpg"> 
+          </div>
+          <div class="col-md-8">
+            <img src="../img/bridge_Section1-1.jpg"> 
+          </div>
+          <div class="col-md-8">
+            <img src="../img/bridge_Section2-2.jpg"> 
+          </div>
+          <div class="col-md-4">
+            <img src="../img/bridge_PlanSection.png"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/bridge_RenderFar.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/bridge_RenderInside.jpg"> 
           </div>
         </div>
       </div>
