--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <div class="thumbnail"> 
             <a href="html/library.html">
               <img src="img/intro_Library.png" alt="">
-              <h3 class="thumbnailTitle"> Library </h3>
+              <h3 class="thumbnailTitle"> Convergence </h3>
             </a>
           </div>
         </div><!--/.item  -->
