added content for library page

--- a/html/library.html
+++ b/html/library.html
@@ -67,38 +67,46 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
+          <div class="col-md-4">
+            <img src="../img/library_FoamTrace3.jpg"> 
+          </div>
+          <div class="col-md-4">
+            <img src="../img/library_FoamTrace4.jpg"> 
+          </div>
+          <div class="col-md-4">
+            <img src="../img/library_FoamTrace5.jpg"> 
+          </div>
           <div class="col-md-6">
-            <img src="../img/bridge_SketchSection.jpg"> 
+            <img src="../img/library_SiteModel.jpg"> 
           </div>
           <div class="col-md-6">
-            <img src="../img/bridge_SketchPlan.jpg"> 
+            <img src="../img/library_ModelVoid.jpg"> 
           </div>
-          <div class="col-md-4">
-            <img src="../img/bridge_ModelWindSide.jpg"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/bridge_ModelWind.JPG"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/bridge_ModelGround.JPG"> 
+          <div class="col-md-12"></div>
+          <div class="col-md-12">
+            <img src="../img/library_5thfloorsection.jpg"> 
           </div>
           <div class="col-md-12">
-            <img src="../img/bridge_SitePlan.jpg"> 
+            <img src="../img/library_4thfloorsection.jpg"> 
           </div>
-          <div class="col-md-8">
-            <img src="../img/bridge_Section1-1.jpg"> 
+          <div class="col-md-12">
+            <img src="../img/library_3rdfloorsection.jpg"> 
           </div>
-          <div class="col-md-8">
-            <img src="../img/bridge_Section2-2.jpg"> 
+          <div class="col-md-12">
+            <img src="../img/library_2ndfloorsection.jpg"> 
+          </div>
+          <div class="col-md-10">
+            <img src="../img/library_1stfloorsection.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/library_basementsection.jpg"> 
           </div>
           <div class="col-md-4">
-            <img src="../img/bridge_PlanSection.png"> 
+            <img src="../img/library_miniplan.png"> 
           </div>
+          <div class="col-md-9"></div>
           <div class="col-md-12">
-            <img src="../img/bridge_RenderFar.jpg"> 
-          </div>
-          <div class="col-md-12">
-            <img src="../img/bridge_RenderInside.jpg"> 
+            <img src="../img/library_section.jpg"> 
           </div>
         </div>
       </div>
