--- a/html/MCDA_library.html
+++ b/html/MCDA_library.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Convergence </title>
+    <title>Tola Oniyangi | Siting Libraries </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -68,38 +68,20 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
-          <div class="col-md-6">
-            <img src="../img/bridge_SketchSection.jpg"> 
-          </div>
-          <div class="col-md-6">
-            <img src="../img/bridge_SketchPlan.jpg"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/bridge_ModelWindSide.jpg"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/bridge_ModelWind.JPG"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/bridge_ModelGround.JPG"> 
+          <div class="col-md-12">
+            <img src="../img/mcda_process.jpg"> 
           </div>
           <div class="col-md-12">
-            <img src="../img/bridge_SitePlan.jpg"> 
-          </div>
-          <div class="col-md-8">
-            <img src="../img/bridge_Section1-1.jpg"> 
-          </div>
-          <div class="col-md-8">
-            <img src="../img/bridge_Section2-2.jpg"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/bridge_PlanSection.png"> 
+            <img src="../img/mcda_decisionmap.jpg"> 
           </div>
           <div class="col-md-12">
-            <img src="../img/bridge_RenderFar.jpg"> 
+            <img src="../img/mcda_lotsuitability1.jpg"> 
           </div>
           <div class="col-md-12">
-            <img src="../img/bridge_RenderInside.jpg"> 
+            <img src="../img/mcda_lotsuitability2.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/mcda_lotsuitability3.jpg"> 
           </div>
         </div>
       </div>
