added all text, started figuring out click to see more for airbnb and data sketches, finished the read

--- a/html/about.html
+++ b/html/about.html
@@ -61,8 +61,7 @@
           <a href="https://www.linkedin.com/in/tolaoniyangi/"  target="_blank"> LinkedIn</a> 
           <a href="https://github.com/tolaoniyangi"  target="_blank"> Github</a> 
           <a href="https://twitter.com/TolaOniyangi"  target="_blank"> Twitter </a> 
-          <p> tolaoniyangi@gmail.com</p> <br>
-          <p> tola.oniyangi@columbia.edu</p>
+          <p> tolaoniyangi@gmail.com</p> 
         </div>
       </div>
     </div>
