--- a/html/airbnb.html
+++ b/html/airbnb.html
@@ -68,8 +68,13 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
-          <div class="page" id="data">
-            <a href="https://rdottle.github.io/dv-final-project/index.html" target="_blank"><img src="../img/DV-Sp17_GroupTBD-sm.gif"> </a>   
+          <div class="col-md-12" >
+            <div id="linkedImage">
+              <a href="https://rdottle.github.io/dv-final-project/index.html" target="_blank">
+                <p> Click to visit page </p>
+                <img src="../img/DV-Sp17_GroupTBD-sm.gif"> Click to visit page
+              </a>   
+            </div>
           </div>
         </div>
       </div>
