--- a/html/paintingseries.html
+++ b/html/paintingseries.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Urban Sprawl </title>
+    <title>Tola Oniyangi | Series of Three </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -55,9 +55,9 @@
       <div class="col-md-3">
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
-          <h2>Can we create a model to predict the expansion of cities? </h2>
-          <p> In this machine learning project, a model that could predict urban sprawl was trained by being fed historical images of cities using Python. The model learnt to recognize built and unbuilt areas and identify them with different colors, and thus was able to predict future sprawl.</p> 
-          <p class="additionalInfo"> Fall 2016. Data Mining the City - taught by Danil Nagy. In collaboration with Marwah Garib, Vrinda Sharma and Kun Qian. </p>    
+          <h2> Can transformations in life be captured through painting? </h2>
+          <p> This series of paintings stems from the idea that change is constant. The first represents breaking out of a rigid grid. The second portrays a shift towards a move towards dynamism, high energy and change. The third shows a complete break from the grid and a movement towards vibrancy, fun, and ultimately, freedom. </p> 
+          <p class="additionalInfo"> Spring 2016. Painting 1. Taught by Victoria Roth.</p>    
         </div>
       </div></div>
     </div> <!-- container  -->
@@ -68,8 +68,8 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
-            <iframe width="853" height="480" src="https://www.youtube.com/embed/B-9XpqFs0FY" frameborder="0" allowfullscreen></iframe>
-            <img src="../img/dmc_methodologyDiagram.png"> 
+          <div class="col-md-12">
+            <img src="../img/paintingseries_wall.jpg"> 
           </div>
         </div>
       </div>
