--- a/index.html
+++ b/index.html
@@ -147,6 +147,16 @@
           </div>
         </div><!--/.item  -->
 
+        <!-- PAINTINGS  -->
+        <div class="col-md-4 col-sm-6 item">
+          <div class="thumbnail"> 
+            <a href="html/bridge.html">
+              <img src="img/intro_paintingseries.jpg" alt="">
+              <h3 class="thumbnailTitle"> Series of Three </h3>
+            </a>
+          </div>
+        </div><!--/.item  -->
+
 
 
       </div> <!--/.masonry-container  -->
