--- a/html/citibike.html
+++ b/html/citibike.html
@@ -56,7 +56,7 @@
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
           <h2> How accessible is New York City's Citi Bike network? Who benefits from it? </h2>
-          <p> Ohhhh i can use the background to make this paragraph actually </p> 
+          <p> This evaluation of the Citi Bike network looks at its accessibility to New York City residents based on two different proximity metrics. The first is a service area from half a mile from Citi Bike stations, and the second is accessibility via subway stations thirty minutes away from those Citi Bike stations. Analyzing Citi Bike as a bi-modal transportation option illustrates that the system is rather robust, but is not accessible equally across age and race. Minority populations are less likely to have access to Citi Bike than white populations. Younger populations are also more likely to have access, but this is on par with New York City's relatively young population. </p> 
           <p class="additionalInfo"> Spring 2017. Introduction to Geographic Information Systems. Taught by Leah Meisterlin. In collaboration with Joan Zhang.</p>    
         </div>
       </div></div>
