--- a/html/airbnb.html
+++ b/html/airbnb.html
@@ -71,8 +71,7 @@
           <div class="col-md-12" >
             <div id="linkedImage">
               <a href="https://rdottle.github.io/dv-final-project/index.html" target="_blank">
-                <p> Click to visit page </p>
-                <img src="../img/DV-Sp17_GroupTBD-sm.gif"> Click to visit page
+                <img src="../img/DV-Sp17_GroupTBD-sm.gif">
               </a>   
             </div>
           </div>
