--- a/html/paintingseries.html
+++ b/html/paintingseries.html
@@ -56,7 +56,7 @@
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
           <h2> Can transformations in life be captured through painting? </h2>
-          <p> This series of paintings stems from the idea that change is constant. The first represents breaking out of a rigid grid. The second portrays a shift towards a move towards dynamism, high energy and change. The third shows a complete break from the grid and a movement towards vibrancy, fun, and ultimately, freedom. </p> 
+          <p> This series of paintings stems from the idea that change is constant. The first represents breaking out of a rigid grid. The second portrays a shift towards dynamism and change through the painting's color and energy. The third shows a complete break from the grid and a movement towards vibrancy, fun, and ultimately, freedom. </p> 
           <p class="additionalInfo"> Spring 2016. Painting 1. Taught by Victoria Roth.</p>    
         </div>
       </div></div>
