--- a/html/datasketches.html
+++ b/html/datasketches.html
@@ -56,7 +56,7 @@
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
           <h2> How can one assess data visualization projects in an engaging manner? </h2>
-          <p> This project was both an evaluation of Data Sketches, a data visualization project, and a website design challenge. It communicated ideas through a responsive grid system and simple graphical language. </p> 
+          <p> This <a href="https://rdottle.github.io/grouptbd-assignment2/index.html"  target="_blank"> project </a> was both an evaluation of Data Sketches, a data visualization project, and a website design challenge. It communicated ideas through a responsive grid system and simple graphical language. </p> 
           <p class="additionalInfo"> Spring 2017. Data Visualization for Architecture, Urbanism and the Humanities. Taught by Juan Francisco Saldarriaga Chaux. In collaboration with Rachael Dottle, Eric Wong, Clara Dykstra and Andreea Seusan. </p>    
         </div>
       </div></div>
@@ -70,7 +70,9 @@
         <div class="col-md-9">
           <div class="col-md-12">
             <div id="linkedImage">
-              <img src="...website gif..."> 
+              <a href="https://rdottle.github.io/grouptbd-assignment2/index.html"  target="_blank"> 
+                <img src="../img/datasketches_animation.gif"> 
+              </a> 
             </div>
           </div>
         </div>
