--- a/html/about.html
+++ b/html/about.html
@@ -57,7 +57,7 @@
           <p> I am currently working at the Center for Spatial Research and the Temple Hoyne Buell Center for the study of American Architecture at Columbia University.</p>
         </div>
         <div class = "col-md-6 col-sm-6 item">
-          <a href="../img/TolaOniyangi_Resume.pdf"  target="_blank"> Resume </a> <br>
+          <a href="../pdf/TolaOniyangi_Resume.pdf"  target="_blank"> Resume </a> 
           <a href="https://www.linkedin.com/in/tolaoniyangi/"  target="_blank"> LinkedIn</a> 
           <a href="https://github.com/tolaoniyangi"  target="_blank"> Github</a> 
           <a href="https://twitter.com/TolaOniyangi"  target="_blank"> Twitter </a> 
